--- a/sass/_html-styles.sass
+++ b/sass/_html-styles.sass
@@ -2,7 +2,7 @@ html
   margin: 0
   color: rgb(247,247,220)
   font: 1rem/1.6rem 'Titillium Web', sans-serif
-  background: #000 url(http://www.moonwards.com/img/tycho-mod.png) no-repeat fixed right 250px
+  background: #000 url(https://www.moonwards.com/img/tycho-mod.png) no-repeat fixed right 250px
   padding: 0
   background-size: 1600px
   @media only screen and (min-width:1350px)
