--- a/sass/_blocks-objects.sass
+++ b/sass/_blocks-objects.sass
@@ -178,10 +178,13 @@ div .gallery
   @media only screen and (max-width: 1000px)
     +flex-flow(column nowrap)
 
-
-
 .column
   +flex(1 1 30%)
   box-sizing: border-box
+  margin: 0
+  padding: 15px
+
+.spanAll
+  width: 100%
   margin: 0
   padding: 15px
