content for timeline and resources
Former-commit-id: b917563d00263e5421494d2529874412a60499da [formerly 5fbe6d6bc27146e4776039a47365ad05af9b8d74]
Former-commit-id: 49fd6946e3968b4046d39dfc771b282eadc43785

--- a/_includes/resources.html
+++ b/_includes/resources.html
@@ -1,8 +1,21 @@
 <h1>Resources</h1>
-<p>There are many tools, services and information sources involved in a project. Perhaps you want to check out some of them?</p>
+<p>There are many tools, services and information sources involved in a project such as this. Would you perhaps like to check out some of them?</p>
 <h2>Software</h2>
 <ul>
-	<li><a href="https://www.blender.org/">Blender</a> 3D graphics program</li>
-	<li><a href="https://www.geogebra.org/">GeoGebra</a> Interactive mathematical apps</li>
+	<li><a href="https://www.blender.org/">Blender</a> 3D graphics program, which was used to create all the models.</li>
+	<li><a href="https://www.geogebra.org/">GeoGebra</a> Interactive mathematical apps, which are used to demonstrate orbital mechanics.</li>
+  <li><a href="https://jekyllrb.com/docs/home/">Jekyll</a>, a static site generator, which was used to create this website.
+  <li><a href="https://atom.io/">Atom Editor</a>, a hackable text editor with lots of tools that assist in coding.</li>
 </ul>
+<p>All of the above programs are open source. Moonwards uses only open source resources wherever possible.</p>
+<p>If you are interested in learning in depth about the science and engineering of space exploration, try going here:</p>
 <h2>Websites</h2>
+<ul>
+  <li><a href="http://www.lpi.usra.edu/lunar/">The Lunar and Planetary Institute</li>
+  <li>The<a href="https://www.sti.nasa.gov/">NASA Technical Reports Server</a>, a database of academic papers and reports produced by NASA staff going back to the 60s.</li>
+  <li><a href="https://phys.libretexts.org/Core">LibreTexts Physics</a>, a textbook project using a Wiki format. The Chemistry and Math sections also have a lot of resources, and the project seems to be growing well.</li>
+  <li><a href="https://solarsystem.nasa.gov/">Solar System Exploration</a>, a collection of NASA material on a wide range of solar system objects, missions to those places, the history of space exploration, and more.</li>
+  <li><a href="https://space.stackexchange.com/">Space Exloration Stack Exchange</a>, a question and answer site for anything related to space exploration</li>
+  <li><a href="http://target.lroc.asu.edu/q3/">Quickmap</a>, a 3d map of the entire Moon using Lunar Reconnaissance Orbiter data. Data from GRAIL, Chandrayaan-1, and Clementine have also been mapped onto the virtual Moon.</li>
+</ul>
+<h2>Online Books</h2>
