resources content added
Former-commit-id: a9579ae257d2d9d4a27e51621b0c64480c629cdd [formerly c911e65b4cca5905c1c9b8e7aaa59aa1e28eb681]
Former-commit-id: 915efb16614db8fbd29cb09291724a3bbe1047aa

--- a/_includes/resources.html
+++ b/_includes/resources.html
@@ -17,5 +17,21 @@
   <li><a href="https://solarsystem.nasa.gov/">Solar System Exploration</a>, a collection of NASA material on a wide range of solar system objects, missions to those places, the history of space exploration, and more.</li>
   <li><a href="https://space.stackexchange.com/">Space Exloration Stack Exchange</a>, a question and answer site for anything related to space exploration</li>
   <li><a href="http://target.lroc.asu.edu/q3/">Quickmap</a>, a 3d map of the entire Moon using Lunar Reconnaissance Orbiter data. Data from GRAIL, Chandrayaan-1, and Clementine have also been mapped onto the virtual Moon.</li>
+  <li><a href="http://www.projectrho.com/public_html/rocket/index.php">Atomic Rockets</a>, an overview of rocket science and design. Note the 'Click to Show Topics' text just under the logo - access the menu there.</li>
 </ul>
 <h2>Online Books</h2>
+<p>All of these are dated, but remain highly relevant for those seeking an overview of these areas.</p>
+<ul>
+  <li><a href="http://www.uapress.arizona.edu/onlinebks/ResourcesNearEarthSpace/contents.php">Resources of Near-Earth Space</a>, 1993, Edited by John Lewis, Mildred Shapely Matthews, and Mary Guerrieri. Background to the field of mining in space.</li>
+  <li><a href="https://settlement.arc.nasa.gov/75SummerStudy/Table_of_Contents1.html">Space Settlements: A Design Study</a>, Space station colony design, from a summer workshop in 1975 conducted by Stanford University and Ames Research Center.</li>
+  <li><a href="http://www.lpi.usra.edu/publications/books/lunar_sourcebook/">The Lunar Sourcebook</a>, 1991, Edited by Heiken, Vaniman, and French. Lunar geology, mineralogy, and other basic characteristics.</li>
+  <li><a href="http://www.lpi.usra.edu/publications/books/lunar_bases/">Lunar Bases and Space Activities of the 21st Century</a>, 1985, Edited by W. W. Mendell. A collection of all the papers presented at a symposium in 1984, put together by several American academic and research institutions. A broad range of possibilities and considerations for lunar bases is presented.</li>
+  <li><a href="http://www.nss.org/settlement/moon/library/lunar2.htm">The 2nd Conference on Lunar Bases and Space ACtivities of the 21st Century</a>, 1988, Edited by W. W. Mendell. Same as above, 3 years later.</li>
+</ul>
+<h2>Curated Resource Lists</h2>
+<p>Here are 3 lists from Space Exploration Stack Exchange where members put resources useful for learning and practicing the field.</p>
+<ul>
+  <li><a href="http://meta.space.stackexchange.com/q/249/4660">The Classics</a>. Where these items are available online, links are provided, most of which are for free versions. Other entries are for the core texts for those studying the field.</li>
+  <li><a href="http://meta.space.stackexchange.com/q/505/4660">Educational resources to accompany Space Resources</a>. This list focuses on online courses and indices of reference material, and has several video series.</li>
+  <li><a href="http://meta.space.stackexchange.com/q/790/4660">Software Tools for space exploration available online</a>. There are sections about online tools, downloads, source code, and simulator games. Almost all items are free.</li>
+</ul>
