add titles to some nav entries
Former-commit-id: 6bc26e5dbc0ef53a8b2cc36df56f212675a7ff55 [formerly 4d439c20539c950da8b76e29c3e6a1609fabf7fe]
Former-commit-id: 46bd9e524febae3d9140d4af594ee5b1d821575f

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,16 +1,16 @@
 	<nav>
 		<ul>
-			<li><a href="index.html">Mission</a>
+			<li><a href="index.html" title="Where recent items appear, and a project outline">Mission</a>
 				<ul>
-					<li><a href="project.html">Project</a>
+					<li><a href="project.html" title="Core philosophy, about us, and the stuff below">Project</a>
 						<ul>
 							<li><a target="_blank" href="http://moonwards1.blogspot.com/">Blogger</a></li>
 							<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
-							<li><a href="project.html#resources">Resources</a></li>
+							<li><a href="project.html#resources" title="Lots of ways to learn about space exploration and lunar colonization">Resources</a></li>
 						</ul>
 					</li>
-					<li><a href="timeline.html">Timeline</a></li>
-					<li><a href="model.html">Model</a></li>
+					<li><a href="timeline.html" title="How colony development unfolds in our virtual world">Timeline</a></li>
+					<li><a href="model.html" title="The model of social and economic development that informs the timeline">Model</a></li>
 				</ul>
 			</li>
 			<li><a href="colonies.html">Colonies</a>
