transport content refinements, timeline content added
Former-commit-id: 8362a8b0fd463306c503652a74b6af03abb3c430

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -61,7 +61,7 @@
 					<li><a href="machines2.html#transport">Transport</a>
 						<ul>
 							<li><a href="machines2.html#nuclearShuttles">Nuclear Shuttles</a></li>
-							<li><a href="machines2.html#CargoShip">Cargo Ship</a></li>
+							<li><a href="machines2.html#PodShip">Pod ship</a></li>
 							<li><a href="machines2.html#TetherTransport">Vertical Tethers</a></li>
 						</ul>
 					</li>
