--- a/_includes/transport/tethers/AsteroidAnchors.html
+++ b/_includes/transport/tethers/AsteroidAnchors.html
@@ -13,6 +13,7 @@
 					could go anywhere on the Moon every two weeks, and could lauch to
 					Earth that frequently too.
 				</p>
+        <p>How close the foot of the tether can safely be to the surface mostly depends on the size of the anchor mass. The larger it is relative to the shuttles, the less the tether foot dips down when a shuttle is docked to the foot platform. The mass of loaded cable cars is also something to consider. The calculations on these orbital perturbations remain to be done, so for now the foot height is set at 50 km. A healthy margin in this regard is definitely needed, but perhaps it can be lowered more. It makes a big difference to the amount of fuel needed to safely land.</p>
 				<p>
 					One of the great things about combining asteroid retrieval with
 					tethers, is that it makes mining the asteroid so much easier. Most
@@ -31,7 +32,7 @@
 					The polar tethers would make any point on the Moon accessible every
 					3.5 days, and the equatorial tether could launch to Earth, or
 					anywhere else, twice a day. The equatorial tether would be much easier for
-					any ship from Earth (or Mars, or the ateroid belt, or anywhere) to
+					any ship from Earth (or Mars, or the asteroid belt, or anywhere) to
 					dock with than the polar tethers, requiring a plane-change of
 					a few degrees at most and a much greater range of possible
 					trajectories.
