--- a/_includes/transport/tethers/EarthTether.html
+++ b/_includes/transport/tethers/EarthTether.html
@@ -1,4 +1,4 @@
-<section>
+<section id="EarthTether">
     <div class="outerDiv">
         <div class="innerDiv">
             <h3>A Vertical Tether for Earth</h3>
@@ -23,6 +23,7 @@
                 <li>
                     Zylon is still good enough to do the job, although it takes an awful lot more of it. The spaceward tether, going to the tip, is actually under the most strain - going beyond 15,000 km wouldn't be practical without better materials. At 15,000 km, the tether
                     needs to be at least 10 times thicker where it attaches to the anchor than it is at the tip in order to safely bear the loads on it. For a decent safety margin, more like 15 times as thick. </li>
+                <li>The anchor asteroid needs to be as massive as possible. The figure sketched in right now is 1 metric megaton. By the time this is done we are old hands at rustling asteroids, so we bring home one well worth the trouble, chock full of platinum-group metals. The size isn't for the sake of the billions of dollars of metals, though, it is for orbital stability. There will be plenty of engines on the anchor to do station-keeping, but the harder it is to nudge it around, the better. This complex will also get a counter-weight system that will allow the center of mass to be quickly shifted by maybe up to 50 or 100 km, and/or perhaps have a telescoping section on the end platforms of a similar length.</li>
                 <li>
                     The anchor mass is just outside the inner Van Allen Belt, meaning the car travelling the tether has to traverse it to get there. To safely transport people it would need thick and heavy shielding. </li>
                 <li>
@@ -33,10 +34,7 @@
                 <li>
                     It would be important, and logical, that the space station at the anchor host an extensive repair and maintenance service for satellites. It needs that just to protect itself from collisions with space junk. </li>
                 <li>
-                    An approach to satellite orbits based around the priorities of the tether complex would help a lot with collision issues. Three orbital altitudes would be strongly preferred: below 250 km, where the tether foot is, at the altitude of the anchor body (but
-                    only if the satellite will move in an orbit similar to the anchor), and above the tether tip. Since the tether complex can help a great deal with satellite deployment, and maintenance, there would be a strong incentive to choose orbits
-                    that pose no threat to it.
-                </li>
+                    An approach to satellite orbits based around the priorities of the tether complex would help a lot with collision issues. Three orbital altitudes would be strongly preferred: below 250 km, where the tether foot is, at the altitude of the anchor body (but only if the satellite will move in an orbit harmonious with the anchor), and above the tether tip. Since the tether complex can help a great deal with satellite deployment, and maintenance, there would be a strong incentive to choose orbits that pose no threat to it. </li>
             </ul>
             <p>
                 It's a much bigger project to build this thing than to do the same thing at the Moon. There sure is a huge payoff, though. The tether orbiting the Earth appears on the Moonwards timeline far enough down the road for it to be justified to assume stronger
