--- a/_includes/transport/tethers/tetherLaunchers.html
+++ b/_includes/transport/tethers/tetherLaunchers.html
@@ -1,7 +1,7 @@
 	<section>
 		<div class="outerDiv">
 			<div class="innerDiv">
-				<h3>Tethers as Launchers</h3>
+				<h3>Tethers as Launchers, and Tether Control</h3>
 				<p>
 					Extend tethers outwards from the anchors, heading
 					away from the lunar surface, and they become launchers. That's because the
@@ -15,22 +15,21 @@
 					to Earth, or go to Mars, Vesta, Ceres, or Venus. It will get you most
 					of the way to Jupiter.
 				</p>
-				<p>
-					If you manage to balance the mass
-					that leaves the tethers with the mass that is received by them, you
-					can even do all this without any use of fuel. The momentum the
-					tether complex loses when something leaves is balanced by the
-					momentum gained when something arrives. In practice, though, a bunch
-					of engines on the anchor masses are needed to keep
-					orbits nice and circular and in the right spot. A few small engines would be enough to achieve this,
-					since the asteroid anchor is many times heavier than any ship, and
-					the center of gravity of the whole tether can be moved at will by
-					reeling the spaceward and moonward tethers in and out. Making the
-					platforms at the tip and foot of the tether complex good and
-					massive helps with this, and also reduces oscillations by
-					increasing the tension on the cables.
-				</p>
-			</div>
+				<p> If you manage to balance the mass that leaves the tethers with the mass that is received by them, you can even do all this without any use of fuel. The momentum the tether complex loses when something leaves is balanced by the momentum gained when something arrives. In practice, though, a bunch of engines on the anchor masses are needed to keep orbits nice and circular and in the right spot.</p>
+        <p>The priority to bring asteroids that are as large as possible is primarily to create anchors that outweigh the objects that travel on the attached tethers so much that orbit control is not difficult. The ability to move the center of gravity of the whole tether quickly could still be advantageous to reducing fuel expenditure, and possibly be important to safety in extreme cases. This could be done by: </p>
+        <ul>
+          <li>Reeling the spaceward and groundward tethers in and out.</li>
+          <li>Having semi-independent counter-weights that move on their own cables, or on arms, or on telescoping trusses</li>
+          <li>Having systems on the end platforms that reel them in or out, or telescope them up or down.</li>
+        </ul>
+        <p>Oscillations and twirling of the cables is the other main control concern.
+        <ul>
+          <li>Making the platforms at the tip and foot of the tether complex good and massive helps with this by increasing the tension on the cables.</li>
+          <li>The end platforms need thrusters that can be used to dampen oscillations, and to prevent or unwind twists in the cables.</li>
+          <li>The cable cars need moveable weights on rails that can be similarly used to dampen oscillations. It may be better to invest early on in infrastructure so that two cars can pass each other, to have the option of a car moving around simply to work on cable and orbit control.</li>
+          <li>However, with cables thousands of kilometers long, the main control strategy for waving and twirling is for cars to be able to adapt. There will always be some oscillation.</li>
+        </ul>
+      </div>
 		</div>
 	</section>
 	<aside>
