--- a/_includes/transport/transportTethers.html
+++ b/_includes/transport/transportTethers.html
@@ -4,31 +4,10 @@
 							<div class="innerDiv">
 								<h2>Vertical Tethers for the Win</h2>
 				<p>
-					The real peach is vertical tethers. Think of them as junior
-					space elevators. They hang down towards the surface of the body they
-					orbit from a large anchor mass, the same as space elevators do. They
-					just aren't attached to its surface. The platform at the bottom of
-					their cable	(the foot) instead
-					moves above the surface at some suitably low altitude. Ships launched
-					from the surface need to catch up to the foot, and to brake to return to
-					the surface. The advantage is the delta v required is much less than
-					what is needed to get to orbit. For the first tether planned for
-					the virtual colonies, it takes 1/4 of the normal delta v. That is
-					the case if the foot hangs to 50 km above the surface and the
-					anchoring asteroid orbits 5000 km up.
-				</p>
+					The real peach is vertical tethers. Think of them as junior space elevators. They hang down towards the surface of the body they orbit from a large anchor mass, the same as space elevators do. They just aren't attached to its surface. The platform at the bottom of their cable	(the foot) instead moves above the surface at some suitably low altitude. Ships launched from the surface need to catch up to the foot, and to brake to return to the surface. The advantage is the delta v required is much less than what is needed to get to orbit. For the first tether planned for the virtual colonies, it takes 1/4 of the normal delta v. That is the case if the foot hangs to 50 km above the surface and the anchoring asteroid orbits 5000 km up. </p>
+        <p>Managing a tether is far easier if you have a nice, heavy anchor mass so big that the center of gravity of the whole complex doesn't move very much as things come and go. That helps its orbit stay nice and circular with much less maintenance, and you can afford to let the orbit degrade a little while you wait for more ships to arrive that will correct it by adding or subtracting momentum. However, it will always need engines for station keeping. The savings on propellant mass for the whole transport system between orbit and the surface is still huge compared to what the nuclear shuttles would need to go back and forth directly. Not only do the momentum exchanges by everything that comes and goes regularly give it boosts, the engines can be very low thrust, as course corrections can be done over weeks or months without causing issues. Those sorts of engines are by far the most efficient. HiPEP ion engines would be the best option here, or perhaps the Neumann drives mentioned above. An array of such engines are installed on each tether anchor. </p>
 				<p>
-					Zylon is the material most often considered for this sort of
-					application. It is an existing product that is plenty strong
-					enough to be the cable for the tether just mentioned. The car that
-					runs up and down the cable needs to be designed but that isn't a huge
-					challenge. The best cable design, the best way to deploy it, matters
-					of control and maintenance and such - these would all need to be
-					worked out. They are pretty manageable engineering problems. If
-					creation of such a tether was a priority, it is reasonable to expect
-					we could have it working in a decade, for the kind of budget needed
-					for development of a new rocket.
-				</p>
+					Zylon is the material most often considered for this sort of application. It is an existing product that is plenty strong enough to be the cable for any of the tethers around the Moon. The car that runs up and down the cable needs to be designed but that isn't a huge challenge. The best cable design, the best way to deploy it, matters of control and maintenance and such - these would all need to be worked out. They are pretty manageable engineering problems. If creation of such a tether was a priority, it is reasonable to expect we could have it working in a decade, for the kind of budget needed for development of a new rocket. </p>
 			</div>
 		</div>
 	</section>
