various minor fixes and additions
Former-commit-id: 834cab42348936d455ef4c8dfa32abbf830a33e4

--- a/_includes/transport/tethers/tetherLaunchers.html
+++ b/_includes/transport/tethers/tetherLaunchers.html
@@ -15,7 +15,7 @@
 					to Earth, or go to Mars, Vesta, Ceres, or Venus. It will get you most
 					of the way to Jupiter.
 				</p>
-				<p> If you manage to balance the mass that leaves the tethers with the mass that is received by them, you can even do all this without any use of fuel. The momentum the tether complex loses when something leaves is balanced by the momentum gained when something arrives. In practice, though, a bunch of engines on the anchor masses are needed to keep orbits nice and circular and in the right spot.</p>
+				<p> If you manage to balance the mass that leaves the tethers with the mass that is received by them, you can do all this without any use of fuel. The momentum the tether complex loses when something leaves is balanced by the momentum gained when something arrives. In practice, a bunch of engines on the anchor masses are needed to keep orbits nice and circular and in the right spot.</p>
         <p>The priority to bring asteroids that are as large as possible is primarily to create anchors that outweigh the objects that travel on the attached tethers so much that orbit control is not difficult. The ability to move the center of gravity of the whole tether quickly could still be advantageous to reducing fuel expenditure, and possibly be important to safety in extreme cases. This could be done by: </p>
         <ul>
           <li>Reeling the spaceward and groundward tethers in and out.</li>
