--- a/_includes/transport/transportPodShip.html
+++ b/_includes/transport/transportPodShip.html
@@ -3,15 +3,14 @@
 						<div class="outerDiv">
 							<div class="innerDiv">
 								<h3>Pod ship from Low Earth Orbit to Low Lunar Orbit</h3>
-								<p>The pod ship might as well have next-generation hydrolox engines, such as <a href="http://www.rocket.com/common-extensible-cryogenic-engine">Aerojet Rocketdyne CECE engines</a>, which are designed for up to 50 restarts. After the first tether orbiting the Moon is complete, there would be no role for low-thrust ships on the Moon-Earth run. A pod ship with hydrolox engines will need maintenance in orbit earlier, but a space station in support of these missions is needed anyways, so that is no issue.
-        </p>
-        <p>It will be so large that it would benefit from being assembled in orbit. That type of construction would allow the best overall design, as its shape would be less constrained by the size and shape of rocket fairings. Thus it could have an open, wine-rack sort of shape, with solar panel wings and rocket engines at one end. It may need to be modified after its first trip, as on that trip it takes the nuclear shuttle to the Moon, which will itself be large enough that it couldn't be placed in sectioned cargo bays. After that initial mission, payloads would go on the pod ship in pods designed to slip into bays, a standardized system like pod shipping.
+								<p>The pod ship might as well have next-generation hydrolox engines, such as <a href="http://www.rocket.com/common-extensible-cryogenic-engine">Aerojet Rocketdyne CECE engines</a>, which are designed for up to 50 restarts.
+        It will be so large that it would benefit from being assembled in orbit. That type of construction would allow the best overall design, as its shape would be less constrained by the size and shape of rocket fairings. Thus it could have an open, wine-rack sort of shape, with solar panel wings and rocket engines at one end. It may need to be modified after its first trip, as on that trip it takes the nuclear shuttle to the Moon, which will itself be large enough that it couldn't be placed in sectioned cargo bays. After that initial mission, payloads would go on the pod ship in pods designed to slip into bays, a standardized system like container shipping.
         </p>
         <p>
         If the harvesting of water from the poles turns out to be as easy as some data indicates is possible, it could start bringing full loads of water back to the space station in short order, and be fueled from that source. If that task is instead difficult, fuelling from the Moon would only slowly ramp up.
         </p>
-        <p>This ship is unpiloted. Where autopilot programming is insufficient, remote piloting is done, but this will likely almost never be necessary. If Falcon 9 first stages can manage to land on a barge in rough seas on their own, a pod ship should be able to dock with a tether anchor station on its own.</p>
-        <p>When it is time for crew to go to the Moon, the pod ship can do that too. Cargo pods set up with all the needs of people would be loaded onto it.</p>
+        <p>This ship is unpiloted. Where autopilot programming is insufficient, remote piloting is done, but this will likely almost never be necessary. If Falcon 9 first stages can manage to land on a barge in rough seas on their own, a pod ship should be able to berth with a tether anchor station on its own.</p>
+        <p>When it is time for crew to go to the Moon, the pod ship can do that too. Cargo pods set up with all the needs of people would be loaded onto it. When transferred to the nuclear shuttle, not much needs change. The shuttle also pilots itself, the main thing would be to configure the pod for best radiation protection.</p>
 							</div>
 						</div>
 					</section>
