rename Peary to Inukshuk, add to timeline
Former-commit-id: b386b3e8b7c15a51d02fb34736d5baf68b8ca8d0 [formerly 535a50096b5935d5b5933595f9df98e31c3fa352]
Former-commit-id: 6c683da75fa40f82b8fa0c494719932135f9b219

--- a/_includes/colonies/InukshukColony.html
+++ b/_includes/colonies/InukshukColony.html
@@ -1,8 +1,8 @@
-	<div class="container" id="peary">
+	<div class="container" id="whipple">
 		<section>
 			<article class="outerDiv">
 				<div class="innerDiv">
-					<h1>Peary Crater: Water Inside, Eternal Sun Outide</h1>
+					<h1>Whipple Crater: Water Inside, Eternal Sun Outide</h1>
 					<p>
 						Just a few years ago it was confirmed that in the deep constant shadow of the craters of the Moon's poles there is water. Plus a mix of other substances that were steamed out of the rest of the Moon eons ago - carbon dioxide, ammonia. There seem to be hundreds of millions of tons of it, perhaps billions. There ensued excitement about the new possibilities for settlement this creates - within a small community. Most of the world has already discarded the idea of settling the Moon and wants to press on to Mars, if they favor space settlement at all. We have fogotten the images of lunar bases and towns that were so common during the Apollo days.
 					</p>
@@ -11,22 +11,22 @@
 						<br><br>
 						Thus most pushes for lunar bases these days focus on the poles. There is even a business model - turn the water into liquid hydrogen and liquid oxygen, and sell it as fuel for raising satellites, deep space missions, and space stations. Unlike putting a base on Mars, this is a space program we could undertake quickly, it is much safer, and it has practical payoffs here at home - space refeuling would allow much more space exploration.
 						<br><br>
-						It has been repeatedly debated whether in this project the base at Peary Crater should come first, or the first missions should go to Lalande and expand to Peary from there. The use of nuclear ships reduces the advantage of water at hand for fuel, and the early deployment of tethers reduces it even more. The choice of nuclear generators makes solar power unnecessary. The main business models all focus on early establishment of construction ability, and the construction technique did not seem viable at the poles.
+						It has been repeatedly debated whether in this project there should first be a base mining water at a pole, or the first missions should go to Lalande and expand to ice mining from there. The use of nuclear ships reduces the advantage of water at hand for fuel, and the early deployment of tethers reduces it even more. The choice of nuclear generators makes solar power unnecessary. The main business models all focus on early establishment of construction ability, and the construction technique did not seem viable at the poles.
 					</p>
 					<p>
-						On further investigation, a version of the construction technique planned for Lalande would work with the minerals found in the highlands, where the poles are. That means a large habitat like proposed for Lalande could be made at Peary, allowing the early research and development needed for the core business in this paradigm - construction - to be done there. The assertion is that construction is the best and fastest way to make a Moon settlement profitable, so it is quite significant to have a way to work at the pole on the core business, as well as volatile mining. In that case, the advantage of the machines not needing to deal with night also weighs in favor of going there first. So, now the idea is that a small settlement is made at Peary, and then the first crew sends machines to Lalande and makes the next hab.
+						On further investigation, a version of the construction technique planned for Lalande would work with the minerals found in the highlands, where the poles are. That means a large habitat like proposed for Lalande could be made at the chosen polar site: Whipple Crater, 89&deg;N. This allows the early research and development needed for the core business in this paradigm - construction - to be done there. The sale of places for international astronauts is what funds initial development, but the assertion is that the best and biggest industry the Moon can host is construction. So it is quite significant to have a way to work at the pole on the core business, as well as volatile mining. In that case, the advantage of the machines not needing to deal with night also weighs in favor of going there first. So, now the idea is that a small settlement is made at Whipple Crater, and then the first crew sends machines to Lalande and makes the next hab.
 						<br><br>
 						The early robotic missions would focus on making the hab, not on volatile mining. It is much better for people to be nearby when undertaking something as tricky as extracting volatiles from one of the coldest places in the solar system. Since the focus is developing construction capability, the missions can take more time to perfect and ramp up production of water, carbon dioxide, and ammonia. At first the water that is obtained is only to supplement the fuel supply of the nuclear shuttles. Then it supplies their fuel entirely, and then the new colony has more and more freedom to use water for greenhouses. If there is a good market in cislunar space for water as rocket fuel or whatever else, all the better, but there is no particular need for that in this paradigm.
 					</p>
 					<p>
-						Finally, Peary starts shipping water, carbon, and ammonia to Lalande in ever larger amounts. That water stays on the Moon, to make ponds, then swimming pools, then small lakes. Maybe some would continue to ship to orbit for fuel, or radiation shielding. But there might be no need. By this time asteroids will be mined for water and metals too. They may be a better source for needs in open space.
+						Finally, Whipple starts shipping water, carbon, and ammonia to Lalande in ever larger amounts. Most of water stays on the Moon, to make ponds, then swimming pools, eventually even small lakes. Some continues to ship to orbit for fuel, or radiation shielding - unless there is no need. By this time asteroids will be mined for water and metals too. They may be a better source for needs in open space.
 					</p>
 				</div>
 			</article>
 		</section>
-{% include_relative _includes/colonies/asidePearyColony.html %}
+{% include_relative _includes/colonies/asideInukshukColony.html %}
 </div>
-<section class="frameContainer" id="PearyModels">
+<section class="frameContainer" id="InukshukModels">
  <div class="framePairTop">
   <div class="framewrap frame16x9" id="PolarFirstHab">
 						<iframe src="PolarHab.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
