--- a/sass/_text-styles.sass
+++ b/sass/_text-styles.sass
@@ -54,6 +54,16 @@ h5
   margin: 20px 0 5px 0
   +align-self(center)
 
+h6
+  color: $headingColor
+  background-color: $tabBkgd
+  display: inline
+  font-size: 1rem
+  font-weight: 400
+  padding-left: 0.2rem
+  padding-right: 0.3rem
+  margin-right: 0.3rem
+
 .column h1
   font-weight: 400
   letter-spacing: 1px
@@ -63,6 +73,9 @@ h5
   text-align: right
   padding: 10px
   margin: 5px auto
+
+.column h5
+  background-color: $tabBkgd
 
 figcaption
   font-size: 0.8rem
