new rss post, learn intro, minor formatting
Former-commit-id: fff4fd5ff06993f55ed7fa4764ef7282a40527d6

--- a/_includes/machines/mining/Minerals.html
+++ b/_includes/machines/mining/Minerals.html
@@ -1,10 +1,13 @@
 	<section>
 		<div class="blackDiv">
 			<table>
-				<caption>Chemical makeup of lunar regolith. HL = Highlands,
-					LTB = Low-Ti Basalt, HTB = High-Ti Basalt. <br>From <a href="http://www.uapress.arizona.edu/onlinebks/ResourcesNearEarthSpace/resources11.pdf"> R. D. Waldron's </a>chapter in <a href="http://www.uapress.arizona.edu/onlinebks/ResourcesNearEarthSpace/contents.php"> Resources of Near-Earth Space</a> <details>
-							<summary>Things to remember about lunar chemistry</summary>
-							Because water was not involved in the Moon's formation, and exists only at the poles, and only as captured vapors from meteor impacts, the absence of water in lunar minerals gives them somewhat different properties than Earth equivalents. One anticipated effect is that glass made of lunar materials will have much greater tensile strength due to the absence of the microscopic flaws created by water molecules in the matrix.<br><br> All lunar minerals are highly reduced, meaning they tend to have extra electrons. This also changes their chemical properties, but it won't be clear how until we can experiment on-site. </details>
+				<caption><h2>Chemical makeup of lunar regolith.</h2> 
+          HL = Highlands,
+					LTB = Low-Ti Basalt, HTB = High-Ti Basalt. <br>From <a href="http://www.uapress.arizona.edu/onlinebks/ResourcesNearEarthSpace/resources11.pdf"> R. D. Waldron's </a>chapter in <a href="http://www.uapress.arizona.edu/onlinebks/ResourcesNearEarthSpace/contents.php"> Resources of Near-Earth Space</a>
+          <details>
+						<summary>Things to remember about lunar chemistry</summary>
+							Because water was not involved in the Moon's formation, and exists only at the poles, and only as captured vapors from meteor impacts, the absence of water in lunar minerals gives them somewhat different properties than Earth equivalents. One anticipated effect is that glass made of lunar materials will have much greater tensile strength due to the absence of the microscopic flaws created by water molecules in the matrix.<br><br> All lunar minerals are highly reduced, meaning they tend to have extra electrons. This also changes their chemical properties, but it won't be clear how until we can experiment on-site.
+          </details>
 				</caption>
 			  <tr>
 			    <th rowspan="2" style="vertical-align: bottom;">
