--- a/sass/_text-styles.sass
+++ b/sass/_text-styles.sass
@@ -13,6 +13,9 @@ a
   &:active
     background-color: $aHoverBk
 
+a.clearbk:hover, a.clearbk:active
+  background-color: transparent
+
 
 h1
   color: $headingColor
