--- a/_includes/sigfeed.html
+++ b/_includes/sigfeed.html
@@ -1,7 +1,7 @@
 {% assign items = site.rss | reverse %}
 {% for rss in items limit:3 %}
 <p id="{{rss.guid | prepend: 'item' }}" class="atom">
-	<span class="datetime">{{rss.pubDate | append: ' 00:00:00 CST' }}</span>
+	<span class="datetime">{{rss.pubDate}}</span>
 	<span class="title"><a href="{{rss.link}}">{{rss.title}}</a></span>
 	<span class="description">{{rss.content | xml_escape}}</span>
 </p>
