--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -4,7 +4,7 @@ layout: default
 
 	<header>
 		<div id="Logo">
-			<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards">
+			<a class="clearbk" href="index.html"><img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards"></a>
 		</div>
 		<div class="intro">
 				<h1>{{page.headline}}</h1>
