blog post - timeline to the space boom
Former-commit-id: 86afc497fef47fea50e6a95aa8fd783935f89787

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,12 +4,24 @@
 				<ul>
 					<li><a href="project.html" title="Core philosophy, about us, and the stuff below">Project</a>
 						<ul>
-							<li><a target="_blank" href="http://moonwards1.blogspot.com/">Blogger</a></li>
-							<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
+							<li><a target="_blank" href="http://moonwards1.blogspot.com/" title="Offsite version of the blog">Blogger</a></li>
+							<li><a href="http://www.moonwards.com/forum/" title="Tell us what you think">Forum</a></li>
 							<li><a href="project.html#resources" title="Lots of ways to learn about space exploration and lunar colonization">Resources</a></li>
 						</ul>
 					</li>
-					<li><a href="timeline.html" title="How colony development unfolds in our virtual world">Timeline</a></li>
+					<li><a href="timeline.html" title="How colony development unfolds in our virtual world">Timeline</a>
+            <ul>
+              <li><a href="timeline.html#ShipsRobotsISA" title="The ships for high-volume cargo, the robots for large-scale construction by tele-operation, and the International Space Agency.">Ships, Robots, ISA</a></li>
+              <li><a href="timeline.html#SkyhookHabsRP" title="Vertical Skyhook slashes fuel needs, First Hab at Inukshuk, Sagan Space Station, and the rules of the Residence Program">Skyhook, Habs, RP</a></li>
+              <li><a href="timeline.html#ResidenceProgramChart" title="Showing the population, cost, and revenue of each round, and notes on rule changes in later rounds">Residence Program Chart</a></li>
+              <li><a href="timeline.html#InukshukRP1" title="The equatorial skyhook is built, all the work at Inukshuk Base, and how 250 people living on the Moon spend their time and stay healthy.">250 Astronauts</a></li>
+              <li><a href="timeline.html#3baseRP2-4" title="Gagarin Station shipyard and manufacturing, construction of Cernan's Promise infrastructure, and 3200 people begin to be a society.">3 Bases 3200 People</a></li>
+              <li><a href="timeline.html#RPround5" title="Lunar skyhook system complete, coil gun use, LEO skyhook underway, Cernan's Promise becomes a town full of homes, farms, factories, community spaces, bustle, and life. ">Exponential Growth</a></li>
+              <li><a href="timeline.html#RProunds6-7" title="LEO skyhook transforms access to space, Lalande City is built by autonomous robots and a few human directors, The Residence Program completes, there is a currency, a justice system, a constitution, and they start having kids.">Explosive Growth</a></li>
+              <li><a href="timeline.html#SpaceBoom" title="The capacity to transport people or cargo around cis-lunar space, and to build almost anything with robots that require only minimal direction, has grown so much that almost any project ever proposed is now possible. Activity in space just goes BOOM.">BOOM!</a></li>
+              <li><a href="timeline.html#PostBoom" title="Lalande City fills with 1.5 million people living around and above a micro-managed forest dotted with lakes. Facilities are developed to make having a family easy. Society is happy and stable, but can it stay that way amidst so much change?">Post Boom...</a></li>
+            </ul>
+          </li>
 					<li><a href="model.html" title="The model of social and economic development that informs the timeline">Model</a></li>
 				</ul>
 			</li>
