--- a/_includes/colonies/colonyModelsLalande.html
+++ b/_includes/colonies/colonyModelsLalande.html
@@ -22,7 +22,7 @@
 			 would depend on advancements in robotics more than anything else -
 			 since	we are taking the money for granted.
 	</div>
-	<div class="framePairTop">
+	<div class="framePairTop" id="AtriumCutaway">
 		<div class="framewrap frame16x9">
 			<iframe src="AtriumCutaway.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="" style="overflow-y: hidden;" scrolling="no">
 			</iframe>
@@ -32,7 +32,7 @@
 		</div>
 	</div>
 	<div class="framePairTop">
-		<div class="framewrap frame16x9">
+		<div class="framewrap frame16x9" id="AtriumRadBlind">
 			<iframe src="AtriumRadBlind.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="" style="overflow-y: hidden;" scrolling="no">
 			</iframe>
 		</div>
@@ -40,7 +40,7 @@
 	<div class="framePairBottom">
   Here is a nerd-session about how the radiation blind works. It's a valuable innovation, as the only other way to have natural light is to put 3.5 meters of solid glass over a living space. Atriums hundreds of meters long later become the first gardens and farms on the Moon.
 	</div>
-	<div class="framePairTop">
+	<div class="framePairTop" id="GalleryCutaway">
 		<div class="framewrap frame16x9">
 			<iframe src="GalleryCutaway.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="" style="overflow-y: hidden;" scrolling="no">
 			</iframe>
@@ -49,7 +49,7 @@
 	<div class="framePairBottom">
 		The gallery habitats are the first ones truly designed for life-long residence. They require more infrastructure to build. They, and the long atriums, are the first expressions of the idea it is better to build at scale.
 	</div>
-	<div class="framePairTop">
+	<div class="framePairTop" id="DomeCity">
 		<div class="framewrap frame16x9">
 			<iframe src="DomeCity.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="" style="overflow-y: hidden;" scrolling="no">
 			</iframe>
