add id to Refining.html
Former-commit-id: bd5c807e8d5efddb6f5c94933ab40f7a695ce8d6 [formerly 5203c551bc003259074ca7f5dd4d7477e693762d]
Former-commit-id: a7c1575c9d055d6cd32aac699c82706d10c3b869

--- a/_includes/machines/mining/Refining.html
+++ b/_includes/machines/mining/Refining.html
@@ -25,7 +25,7 @@
 		</div>
 	</aside>
 </div>
-<section class="frameContainer">
+<section class="frameContainer" id="Dustroaster">
  <div class="framePairTop">
 		<div class="framewrap frame16x9">
 						<iframe src="DustRoaster.html" frameborder="0" allowfullscreen
