--- a/_includes/machines/mining/Refining.html
+++ b/_includes/machines/mining/Refining.html
@@ -3,10 +3,13 @@
 			<div class="innerDiv">
 				<h3>Refining to get metals, oxygen, and metal oxides</h3>
 				<p>
-					The alternative to using chemicals for refining processes is using energy. It takes a lot of it and comes with challenges of its own. This is the approach taken by the dust roaster shown in the next section. This one device can do a lot. It produces a range of pure metals, pure oxygen, slag that makes good refractory materials, and a vapor byproduct that can be applied as a hard coating and sealant on objects placed at the machine's outlet. Because any kind of uprocessed regolith that is put into a dust roaster comes out as 100% useful products, it is reasonable to calculate it outcompetes batch methods based on chemicals despite using a lot of energy to do so. By filling its hopper with extra-hot lava melted in the MIP stations or from solar thermal power plants, its power needs can also be considerably reduced. </p>
+					The alternative to using chemicals for refining processes is using energy. It takes a lot of it and comes with challenges of its own. This is the approach taken by the dust roaster shown in the next section. This one device can do a lot. It produces a range of pure metals, pure oxygen, slag that makes good refractory materials, and a vapor byproduct that can be applied as a hard coating and sealant on objects placed at the machine's outlet. Because any kind of regolith that is put into a dust roaster comes out as 100% useful products, it is reasonable to calculate it outcompetes batch methods based on chemicals despite using a lot of energy to do so. By filling its hopper with extra-hot lava melted in the MIP stations or from solar thermal power plants, its power needs can also be considerably reduced. </p>
 				<p>
-					What the dust roaster can't provide is pure metal oxides. That is the unresolved issue that really hangs in the air. Building big and beautiful on the Moon takes a lot of glass, and making glass takes a very specific mix of metal oxides. There are a range of formulas for different kinds of glass, and they can stand a small amount of impurities. None of those formulas are close to the mineral composition of anything found on the Moon. Getting from what there is to what is needed requires either heating a suitable feedstock so hot for so long that most of it evaporates, or using an awuful lot of water and chemicals. The consistent, strong sun can easily do the heating with simple mirrors or lenses. The challenge is figuring out how to control that so specific substances can be collected, and the infrastructure can handle the heat. </p>
-
+					What the dust roaster can't provide is pure metal oxides. That is the unresolved issue that really hangs in the air. Building big and beautiful on the Moon takes a lot of glass, and making glass takes a very specific mix of metal oxides. There are a range of formulas for different kinds of glass, and they can stand a small amount of impurities. None of those formulas are close to the mineral composition of anything found on the Moon. Getting from what there is to what is needed requires either heating a suitable feedstock so hot for so long that most of it evaporates, or using an awuful lot of water and chemicals. The consistent, strong sun can easily do the heating with simple mirrors or lenses. The challenge is figuring out how to control that so specific substances can be collected, and the infrastructure can handle the heat.
+        </p>
+        <p>
+          Or, the process can be done in reverse - take pure metals and oxygen produced by the dust roaster, and combine them to produce metal oxides. That again requires a furnace, and mechanisms to properly mix the ingredients so they react completely, and then to shape them. It may be the most efficient method, if not in general than in certain cases. The process can be finely controlled which is a significant advantage, and heat is cheap as long as you get it by concentrating sunlight.
+        </p>
 			</div>
 		</div>
 	</section>
@@ -19,10 +22,13 @@
 			</figcaption>
 		</figure>
 		<div class="sideDiv">
-			The patent filing for the dust roaster:
+			A patent for the dust roaster:
 			<a href="http://www.google.com.mx/patents/US7935176">'Oxygen extraction apparatus and
 			process'</a>, patent US 7935176 B2
 		</div>
+    <div class="sideDiv">
+      A second patent on the dust roaster: <a href="https://google.com/patents/US20050199797">'Isotope separation process and apparatus therefor'</a>
+    </div>
 	</aside>
 </div>
 <section class="frameContainer" id="Dustroaster">
@@ -34,6 +40,6 @@
 	 </div>
  </div>
  <div class="framePairBottom">
-  The dust roaster hasn't been labelled. It is an important piece.	It takes a molten regolith feed and super-heats it by induction, then passes	that through an electric field that causes different ions to deflect by	different amounts. You get a set of pure metals in the collector, neatly	separated. And you can also skim off pure oxygen during the process. This one	machine solves several problems. Even the slag is useful.
+The model notes go through each stage of processing. Production was estimated in <a href="http://enu.kz/repository/2010/AIAA-2010-8703.pdf">the AIAA paper</a> to be 20 metric tons of silicon per year. If the efficiency for other metals is similar, that means about 10 tons of aluminum, 8 tons of iron, and a ton or so of titanium, considering the average proportion of metals in the regolith of the maria. Output of a desired metal can be increased by selecting better feedstock or pre-processing it with other methods before putting it in the dust roaster. The paper postulated power needs of about 200 kW. If processing targets one or more specific metals, power needs could go up or down.
 </div>
 </section>
