add IlmeniteReactor.html and include model in Refining.html
Former-commit-id: 9691501a1649bb29c0aa6029021f6d1d33746751 [formerly 0cccc6bf243a00f00460abec1a67ea670c0e748f]
Former-commit-id: 9b390776c6138d06c0cd9331f9540c3b309e6e8c

--- a/_includes/machines/mining/Refining.html
+++ b/_includes/machines/mining/Refining.html
@@ -43,3 +43,14 @@
 The model notes go through each stage of processing. Production was estimated in <a href="http://enu.kz/repository/2010/AIAA-2010-8703.pdf">the AIAA paper</a> to be 20 metric tons of silicon per year. If the efficiency for other metals is similar, that means about 10 tons of aluminum, 8 tons of iron, and a ton or so of titanium, considering the average proportion of metals in the regolith of the maria. Output of a desired metal can be increased by selecting better feedstock or pre-processing it with other methods before putting it in the dust roaster. The paper postulated power needs of about 200 kW. If processing targets one or more specific metals, power needs could go up or down.
 </div>
 </section>
+<section class="frameContainer" id="IlmeniteReactor">
+ <div class="framePairTop">
+		<div class="framewrap frame16x9">
+						<iframe src="IlmeniteReactor.html" frameborder="0" allowfullscreen
+						mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+						</iframe>
+	 </div>
+ </div>
+ <div class="framePairBottom">
+   This reactor uses the heat of the sunlight concentrated in the mirrors to melt the regolith loaded into the silo. Then hydrogen is bubbled through the mix. The reaction of hydrogen with the molten mix produces water and free metals. This model looks at processing ilmenite this way, but the process can be applied to many other mixtures. The hotter the contents can be made, the more can be done here. Pre-processing elsewhere can also make this unit more versatile. For instance, if fayalite can be sufficiently purified out of olivine, this reactor could be used to produce silica. The silica is then used to make glass, or panels of quartz. Even if the product is discolored by impurities, a bulk process like that would be invaluable. 
+</div>
