--- a/_includes/machines/mining/Refining.html
+++ b/_includes/machines/mining/Refining.html
@@ -10,6 +10,18 @@
         <p>
           Or, the process can be done in reverse - take pure metals and oxygen produced by the dust roaster, and combine them to produce metal oxides. That again requires a furnace, and mechanisms to properly mix the ingredients so they react completely, and then to shape them. It may be the most efficient method, if not in general than in certain cases. The process can be finely controlled which is a significant advantage, and heat is cheap as long as you get it by concentrating sunlight.
         </p>
+        <p>
+          It's also possible to do refining by centrifuging molten regolith. How much purity is achievable with this approach is an open question, but it seems good enough for at least glass with a slight green or brown tint - which is definitely worth it for bulk glass. 
+        </p>
+        <p>
+          First you need to isolate olivine from the regolith (see mineral chart). To do that, heat it to the temperature where everything in it except the olivine is fully melted - around 1200&deg;C. On Earth, deposits of magma that sit at that temperature for a while often form a layer of olivine at the bottom because the crystals settle out. On the Moon, the gravity may be too low for that, at least in a timely fashion, so you help it along by spinning the melt fast enough that a force equivalent to several gravities push the heavy crystals to the outside of their vessel. Shall we say 10 g's of force? Right now, i favor spiinning a flat, disk-shaped vessel to perform this process. The olivine would gather at the rim of the vessel, and the rest would stay towards the middle. Now you chill the vessel to around 1000&deg;C so the whole thing hardens. Unclamp the top half of the vessel from the bottom half, pop out the hot stone, and cut the olivine part off. By lining the vessel with graphite, the stone will pop out easily. The vessel would be sort of like a flat burger, with the stone being the patty and the two halves of the mold being the buns.
+        </p>
+        <p>
+          The east wall of Lalande Crater is probably highlands material in parts. If you get to the bedrock in that area you might find dunite, or digging in the nearby hills might uncover that. Dunite is at least 90% olivine. Doing the above process with that feedstock might reduce the amount of problematic contaminants in the purified olivine, such as titanium.
+        </p>
+        <p>
+
+        </p>
 			</div>
 		</div>
 	</section>
@@ -52,5 +64,5 @@ The model notes go through each stage of processing. Production was estimated in
 	 </div>
  </div>
  <div class="framePairBottom">
-   This reactor uses the heat of the sunlight concentrated in the mirrors to melt the regolith loaded into the silo. Then hydrogen is bubbled through the mix. The reaction of hydrogen with the molten mix produces water and free metals. This model looks at processing ilmenite this way, but the process can be applied to many other mixtures. The hotter the contents can be made, the more can be done here. Pre-processing elsewhere can also make this unit more versatile. For instance, if fayalite can be sufficiently purified out of olivine, this reactor could be used to produce silica. The silica is then used to make glass, or panels of quartz. Even if the product is discolored by impurities, a bulk process like that would be invaluable. 
+   This reactor uses the heat of the sunlight concentrated in the mirrors to melt the regolith loaded into the silo. Then hydrogen is bubbled through the mix. The reaction of hydrogen with the molten mix produces water and free metals. This model looks at processing ilmenite this way, but the process can be applied to many other mixtures. The hotter the contents can be made, the more can be done here. Pre-processing elsewhere can also make this unit more versatile. For instance, if fayalite can be sufficiently purified out of olivine, this reactor could be used to produce silica. The silica is then used to make glass, or panels of quartz. Even if the product is discolored by impurities, a bulk process like that would be invaluable.
 </div>
