misc small changes
Former-commit-id: c0b4ca4f98841ebc4e955a82dc6fd8ec2aabf922 [formerly 99b08f90e5771acc90942665e45e620f5e7f2056]
Former-commit-id: cd66cacb1e4ad54f1ae4c9234bf3e0f862a4cc40

--- a/_includes/resources.html
+++ b/_includes/resources.html
@@ -5,7 +5,7 @@
 	<li><a href="https://www.blender.org/">Blender</a> 3D graphics program, which was used to create all the models.</li>
 	<li><a href="https://www.geogebra.org/">GeoGebra</a> Interactive mathematical apps, which are used to demonstrate orbital mechanics.</li>
   <li><a href="https://jekyllrb.com/docs/home/">Jekyll</a>, a static site generator, which was used to create this website.
-  <li><a href="https://atom.io/">Atom Editor</a>, a hackable text editor with lots of tools that assist in coding.</li>
+  <li><a href="https://atom.io/">Atom Editor</a>, a hackable text editor with lots of tools that assist in coding. (Sigvart, however, swears to <a href="https://wiki.gnome.org/Apps/Gedit">Gedit</a>)</li>
 </ul>
 <p>All of the above programs are open source. Moonwards uses only open source resources wherever possible.</p>
 <p>If you are interested in learning in depth about the science and engineering of space exploration, try going here:</p>
