--- a/_includes/resources.html
+++ b/_includes/resources.html
@@ -4,20 +4,21 @@
 <ul>
 	<li><a href="https://www.blender.org/">Blender</a> 3D graphics program, which was used to create all the models.</li>
 	<li><a href="https://www.geogebra.org/">GeoGebra</a> Interactive mathematical apps, which are used to demonstrate orbital mechanics.</li>
-  <li><a href="https://jekyllrb.com/docs/home/">Jekyll</a>, a static site generator, which was used to create this website.
-  <li><a href="https://atom.io/">Atom Editor</a>, a hackable text editor with lots of tools that assist in coding. (Sigvart, however, swears to <a href="https://wiki.gnome.org/Apps/Gedit">Gedit</a>)</li>
+  <li><a href="https://jekyllrb.com/docs/home/">Jekyll</a>, a static site generator, which was used to create this website.</li>
+  <li><a href="https://atom.io/">Atom Editor</a>, a hackable text editor with lots of tools that assist in coding. (Sigvart, however, swears by <a href="https://wiki.gnome.org/Apps/Gedit">Gedit</a>)</li>
 </ul>
 <p>All of the above programs are open source. Moonwards uses only open source resources wherever possible.</p>
 <p>If you are interested in learning in depth about the science and engineering of space exploration, try going here:</p>
 <h2>Websites</h2>
 <ul>
-  <li><a href="http://www.lpi.usra.edu/lunar/">The Lunar and Planetary Institute</li>
+  <li><a href="http://www.lpi.usra.edu/lunar/">The Lunar and Planetary Institute</a></li>
   <li>The<a href="https://www.sti.nasa.gov/">NASA Technical Reports Server</a>, a database of academic papers and reports produced by NASA staff going back to the 60s.</li>
-  <li><a href="https://phys.libretexts.org/Core">LibreTexts Physics</a>, a textbook project using a Wiki format. The Chemistry and Math sections also have a lot of resources, and the project seems to be growing well.</li>
   <li><a href="https://solarsystem.nasa.gov/">Solar System Exploration</a>, a collection of NASA material on a wide range of solar system objects, missions to those places, the history of space exploration, and more.</li>
-  <li><a href="https://space.stackexchange.com/">Space Exloration Stack Exchange</a>, a question and answer site for anything related to space exploration</li>
+  <li><a href="https://space.stackexchange.com/">Space Exloration Stack Exchange</a>, a question and answer site for anything related to space exploration. </li>
   <li><a href="http://target.lroc.asu.edu/q3/">Quickmap</a>, a 3d map of the entire Moon using Lunar Reconnaissance Orbiter data. Data from GRAIL, Chandrayaan-1, and Clementine have also been mapped onto the virtual Moon.</li>
   <li><a href="http://www.projectrho.com/public_html/rocket/index.php">Atomic Rockets</a>, an overview of rocket science and design. Note the 'Click to Show Topics' text just under the logo - access the menu there.</li>
+  <li><a href="https://open.bccampus.ca/find-open-textbooks/">Open Textbooks</a> and <a href="https://openstax.org/">Openstax</a> both offer a wide range of quality textbooks for download or to read online. <a href="https://ocw.mit.edu/index.htm">MIT Open Courseware</a>, <a href="https://www.edx.org/">edX</a>, and <a href="https://www.khanacademy.org/">Khan Academy</a> offer complete courses including test questions and online help from coaches or in forums. The material is of the finest quality.
+  </li>
 </ul>
 <h2>Online Books</h2>
 <p>All of these are dated, but remain highly relevant for those seeking an overview of these areas.</p>
