uncommited changes commited for cleaning up
Former-commit-id: b21e6493bb3d5b762f39b1e22098c3e6523e4c94

--- a/_includes/colonies/OrbitalColony.html
+++ b/_includes/colonies/OrbitalColony.html
@@ -6,6 +6,9 @@
 					<p>
 						Orbital tethers need asteroids as their stabilizing central mass, and
 						those asteroids are a great place to start a space station.
+						
+						A base in free space is fundamentally different from a surface colony. Without being located deep inside a gravity well
+						it remains easily accessible and possible to move.
 					</p>
 					</div>
 				</article>
