darken text color and decrease div transparency for easier reading
Former-commit-id: 5c11179ca771b66825bd0d9854811f77d1e6c9d5

--- a/sass/_style-vars.sass
+++ b/sass/_style-vars.sass
@@ -1,7 +1,7 @@
 $outerBkgd: rgba(50, 50, 0, 0.7)
-$innerBkgd: rgba(50, 50, 50, 0.7)
+$innerBkgd: rgba(50, 50, 50, 0.8)
 $tabBkgd: rgba(0, 0, 0, 0.4)
-$sideBkgd: rgba(0, 0, 0, 0.7)
+$sideBkgd: rgba(0, 0, 0, 0.8)
 $outRadius: 2rem
 $inRadius: 1.5rem
 $sideRadius: 1.5rem 0 0 1.5rem
@@ -14,8 +14,8 @@ $darkAccent: rgb(80, 80, 15)
 $extraDarkAccent: rgb(47, 52, 0)
 $introRadius: 0 1.5rem 1.5rem 0
 $figcapSize: 0.8rem
-$linx: yellow
-$aVisited: rgb(190,238,50)
+$linx: rgb(220,220,0)
+$aVisited: rgb(190,228,50)
 $aHoverBk: rgb(60,60,10)
 $Radius5px: 5px
 
