--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,6 +31,23 @@ $(document).ready(function() {
 	<div class="container">
 		<h1>{{page.title}}</h1>
 {{content | remove: 'end-excerpt'}}
-	</div>
+{% if page.comments %}
+	<div id="disqus_thread"></div>
+<script>
+var disqus_config = function () {
+this.page.url = '{{page.url}}';  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = '{{page.date}}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://moonwards.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+{% endif %}
+</div>
 </body>
 </html>
