--- a/sass/_blocks-objects.sass
+++ b/sass/_blocks-objects.sass
@@ -64,6 +64,19 @@ aside
     width: 90%
     +align-self(flex-start)
 
+.blackInnerDiv
+  +RadiusIn
+  +display(flex)
+  +flex-flow(column nowrap)
+  +align-items(center)
+  background-color: $sideBkgd
+  margin: 15px
+  p
+    padding: 0.5rem 1.2rem
+    margin: 0
+    width: 90%
+    +align-self(flex-start)
+
 .calcDiv
   +RadiusIn
   +display(flex)
