--- a/sass/_post-styles.sass
+++ b/sass/_post-styles.sass
@@ -54,7 +54,7 @@ header
   margin-top: 30px
   margin-left: 4%
   width: 90%
-  background-color: rgba(50,50,50,0.7)
+  background-color: rgba(50, 50, 50, 0.7)
   position: relative
   p
     padding: 15px
