add Disqus to most blog post, reorganize index.html
Former-commit-id: a3916929c95fdcd685c12d222478a14c34a49081 [formerly 0d21de95b34959091e86275986231e35940a89e7]
Former-commit-id: fc2b08be9922803b94621acec62f5c0a724bc091

--- a/_includes/transport/tethers/tetherLaunchers.html
+++ b/_includes/transport/tethers/tetherLaunchers.html
@@ -12,7 +12,7 @@
 					skyhook's spaceward cable is 15,000 km long, terminating at an
 					altitude of 20,000 km, the outward velocity it imparts to a vessel
 					released from there is 2.7 km/s. That's more than enough to return
-					to Earth, or go to Mars, Vesta, Ceres, skyhookus. It will get you most
+					to Earth, or go to Mars, Vesta, Ceres, or Venus. It will get you most
 					of the way to Jupiter.
 				</p>
 				<p> If you manage to balance the mass that leaves the skyhooks with the mass that is received by them, you can do all this without any use of fuel. The momentum the skyhook complex loses when something leaves is balanced by the momentum gained when something arrives. In practice, a bunch of engines on the anchor masses are needed to keep orbits nice and circular and in the right spot.</p>
