--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,12 +31,13 @@ $(document).ready(function() {
 	<div class="container">
 		<h1>{{page.title}}</h1>
 {{content | remove: 'end-excerpt'}}
+
 {% if page.comments %}
 	<div id="disqus_thread"></div>
 <script>
 var disqus_config = function () {
-this.page.url = '{{page.url}}';  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = '{{page.date}}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+this.page.url = 'https://www.moonwards.com/{{page.url}}';
+this.page.identifier = '{{page.identifier}}';
 };
 
 (function() { // DON'T EDIT BELOW THIS LINE
