--- a/sass/_blocks-objects.sass
+++ b/sass/_blocks-objects.sass
@@ -13,7 +13,7 @@
 
 section
   +display(flex)
-  +flex(3 0 350px)
+  +flex(3 0 450px)
   +flex-flow(column nowrap)
   padding: $mainPad
   margin-top: 3rem
@@ -39,7 +39,9 @@ aside
   +align-items(stretch)
   margin-top: 4rem
   @media only screen and (min-width: 1700px)
-    flex: 2 0 400px
+    +flex(2 0 400px)
+  @media only screen and (max-width: 1000px)
+    +flex(1 1 200px)
 
 .outerDiv
   +RadiusOut
